--- a/src/components/all_posts/Posts.css
+++ b/src/components/all_posts/Posts.css
@@ -14,7 +14,7 @@
   margin: 2rem auto;
 }
 
-h2 {
+.posts-container > h2 {
   font-size: 2rem;
   text-align: center;
   font-weight: bold;
@@ -34,6 +34,9 @@ h2 {
 
 .card:hover {
   background-color: #d9ed92;
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .card-subtitle {
