--- a/src/index.css
+++ b/src/index.css
@@ -10,10 +10,10 @@ font-family: "Roboto", sans-serif;
 /* COLOR PALETTE */
 /* Feel free to change these values and create your own color palette! https://coolors.co/ is a great resource */
 :root {
-  --primary: #52b69a;
-  --secondary: #00a6ed;
-  --info: #d9ed92;
-  --warning: #f6511d;
+  --primary: #168aad;
+  --secondary: #52b69a;
+  --info: #99d98c;
+  --warning: #d9ed92;
   --white: #ffffff;
   --offWhite: #f2f2f3;
   --dark: #3b3b3b;
@@ -28,6 +28,7 @@ input,
 select,
 textarea {
   font-family: "Nunito", sans-serif;
+  color: var(--dark);
 }
 
 body {
@@ -59,8 +60,12 @@ input:focus {
   outline: none;
 }
 
+a:link {
+  color: var(--secondary);
+}
+
 /* GLOBAL STYLING FOR ALL THE BUTTONS BUTTONS */
-button {
+.btn {
   padding: 0.5rem 1rem;
   border: 1px solid transparent;
   border-radius: 0.5rem;
@@ -75,7 +80,7 @@ button {
 }
 
 .btn-primary:hover {
-  background-color: #469b83;
+  background-color: #1a759f;
 }
 
 .btn-secondary {
@@ -83,7 +88,7 @@ button {
 }
 
 .btn-secondary:hover {
-  background-color: #0097d7;
+  background-color: #34a0a4;
 }
 
 .btn-warning {
@@ -91,7 +96,7 @@ button {
 }
 
 .btn-warning:hover {
-  background-color: #e14617;
+  background-color: #b5e48c;
 }
 
 .btn-info {
@@ -99,15 +104,5 @@ button {
 }
 
 .btn-info:hover {
-  background-color: #c7d887;
+  background-color: #76c893;
 }
-
-/* This CSS can be deleted. It is only used for the first chapter */
-/* .welcome {
-  text-align: center;
-  margin: 5rem 14rem;
-  font-size: 4rem;
-  color: aliceblue;
-  font-weight: bold;
-  text-shadow: 2px 3px 4px lightslategray;
-} */
