--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -12,6 +12,7 @@
   list-style-type: none;
   text-align: center;
   color: var(--dark);
+  font-weight: bold;
 }
 
 .navbar-link {
@@ -22,6 +23,10 @@
 
 .navbar-logout {
   margin-left: auto;
+}
+
+.navbar-item:hover {
+  color: var(--primary);
 }
 
 .navbar-link:hover {
